# sovereign-reth

./: .gitignore  Cargo.toml  README.md  build_genesis.js
contracts/: compile.js  package-lock.json  package.json
contracts/src/: SimplePaymaster.sol
crates/attestation/: Cargo.toml
crates/attestation/src/: lib.rs  mock.rs  sgx.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: bgp.rs  config.rs  courier.rs  kzg.rs  lib.rs  metalex.rs  nmt.rs  parallel.rs  pool.rs  precompile.rs  registry.rs  slashing.rs  stateless.rs  subset_election.rs
crates/identity/: Cargo.toml
crates/identity/src/: delegation.rs  lib.rs  merit.rs  namespace.rs  zkp_auth.rs
crates/network/: Cargo.toml
crates/network/src/: bgp_gossip.rs  das.rs  handshake.rs  lib.rs  wireguard.rs  xroad.rs
crates/network/tests/: integration.rs
crates/node/: Cargo.toml
crates/node/src/: config.rs  main.rs
gramine/: build.sh  sovereign-reth.manifest.template
src/: main.rs
