[package]
name = "sovereign-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
revm-primitives = { workspace = true }
revm-state = { workspace = true }
revm-bytecode = { workspace = true }
revm-database-interface = { workspace = true }

reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-provider = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-chainspec = { workspace = true }
nmt-rs = { workspace = true }

