[package]
name = "sovereign-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
revm-primitives = { workspace = true }
revm-state = { workspace = true }
revm-bytecode = { workspace = true }
revm-database-interface = { workspace = true }

reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-provider = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-chainspec = { workspace = true }
nmt-rs = { workspace = true }
boringtun = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
sovereign-attestation = { path = "../attestation" }
sovereign-identity = { path = "../identity" }
did-peer = { workspace = true }
c-kzg = "2.1.8"
serde = { workspace = true }

[dev-dependencies]
serial_test = "3.1"
