[package]
name = "sovereign-network"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
reed-solomon-erasure = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
boringtun = { workspace = true }
alloy-primitives = { workspace = true }

