[package]
name = "sovereign-network"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
reed-solomon-erasure = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
boringtun = { workspace = true }
alloy-primitives = { workspace = true }
sovereign-consensus = { workspace = true }
sovereign-identity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
futures = { workspace = true }
did-peer = { workspace = true }
tracing = { workspace = true }

