[package]
name = "sovereign-node"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "sovereign-reth"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
eyre = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
alloy-primitives = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }


tiny-keccak = { workspace = true }


reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-ethereum = { workspace = true }
reth-db = { workspace = true }
reth-provider = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-exex = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-chainspec = { workspace = true }
reth-node-core = { workspace = true }
reth-cli-util = { workspace = true }

# Workspace dependencies
sovereign-consensus = { workspace = true }
sovereign-attestation = { workspace = true }
sovereign-identity = { workspace = true }
sovereign-network = { workspace = true }
